progressif/main/default/objects/Criterion__c/Criterion__c.object-meta.xml
<CustomObject>
    <label>Critère</label>
    <nameField>
        <label>Nom de Critère</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Critères</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>