progressif/main/default/objects/Criterion__c/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <label>Valeur par défaut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>