progressif/main/default/objects/Criterion__c/fields/FormatCriterion__c.field-meta.xml
<CustomField>
    <fullName>FormatCriterion__c</fullName>
    <description>Format du champ pour ce critère. Exemple: Texte de 255, Nombre sur 10</description>
    <inlineHelpText>Format du champ pour ce critère. Exemple: Texte de 255, Nombre sur 10</inlineHelpText>
    <label>Format du critère</label>
    <length>150</length>
    <type>Text</type>
</CustomField>