progressif/main/default/objects/Criterion__c/fields/LabelCriterion__c.field-meta.xml
<CustomField>
    <fullName>LabelCriterion__c</fullName>
    <description>Libellé du critère affiché dans les écrans</description>
    <inlineHelpText>Libellé du critère affiché dans les écrans</inlineHelpText>
    <label>Libellé du critère</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>