progressif/main/default/objects/Criterion__c/fields/ListValues__c.field-meta.xml
<CustomField>
    <fullName>ListValues__c</fullName>
    <description>Les valeurs de la Picklist  , exemple (Val1,Val2,.....)</description>
    <inlineHelpText>Les valeurs de la Picklist ,exemple (Val1,Val2,.....)</inlineHelpText>
    <label>Liste des valeurs</label>
    <length>150</length>
    <type>Text</type>
</CustomField>