progressif/main/default/objects/Criterion__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <label>Obligatoire</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Oui</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>