progressif/main/default/objects/Criterion__c/fields/NameRatingCriterion__c.field-meta.xml
<CustomField>
    <fullName>NameRatingCriterion__c</fullName>
    <description>Nom transmis à OPA pour pouvoir calculer le tarif</description>
    <inlineHelpText>Nom transmis à OPA pour pouvoir calculer le tarif</inlineHelpText>
    <label>Nom du critère de tarification</label>
    <length>150</length>
    <type>Text</type>
</CustomField>