progressif/main/default/objects/Criterion__c/fields/PlaceHolder__c.field-meta.xml
<CustomField>
    <fullName>PlaceHolder__c</fullName>
    <label>PlaceHolder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>