progressif/main/default/objects/Criterion__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>Code de la règle à appliquer pour ce champ</description>
    <inlineHelpText>Code de la règle à appliquer pour ce champ</inlineHelpText>
    <label>Règle</label>
    <length>150</length>
    <type>Text</type>
</CustomField>