progressif/main/default/objects/Criterion__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Nom de la section dans laquelle affichée le critère sur la page de saisie de l&#39;autorisation</description>
    <inlineHelpText>Nom de la section dans laquelle affichée le critère sur la page de saisie de l&#39;autorisation</inlineHelpText>
    <label>Section</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>